# discountmatlab

./: BERKE_README.md  CMakeLists.txt  MUSTAFA_README.md  README.md
example/: main  main.cpp
headers/: CMatrix.hpp  matlabdiscount.h  matrix.h  matrix_array.hpp  matrix_shape.hpp
src/: matlabdiscount.cpp
